--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,4 +1,4 @@
 @import "general/mixin";
 @import "general/variable";
 @import "style/common";
-@import "style/element-styles";
+@import "style/checkbox";
