--- a/assets/sass/style/_common.scss
+++ b/assets/sass/style/_common.scss
@@ -49,7 +49,7 @@ a {
 ========================*/
 
 body {
- @include gradiant();
+    background-color: #f79494;
 }
 
 a.back-to-article {
@@ -92,9 +92,9 @@ a.github {
 }
 
 main {
-	width: 95%;
-	max-width: 600px;
-	margin: 0 auto;
+    width: 95%;
+    max-width: 600px;
+    margin: 0 auto;
     padding: 30px 0;
     h1 {
         color: $font-white;
@@ -103,16 +103,15 @@ main {
         text-align: center;
         text-transform: none;
     }
-	h2 {
-	    padding: 15px 20px;
-		color: $font-white;
+    h2 {
+        padding: 15px 20px;
+        color: $font-white;
         @include custom-font($fs-default,
         $fw-600);
         text-align: left;
         text-transform: uppercase;
-		background: rgba(0,0,0,0.5);
-	}
- 
+        background: rgba(0, 0, 0, 0.5);
+    }
     section {
         width: 100%;
         height: auto;
@@ -125,41 +124,13 @@ main {
             display: block;
         }
         li {
-            width: 25%;
+            width: 12.25%;
             height: auto;
             float: left;
             position: relative;
             padding: 30px 0;
-            &:nth-child(4n+1) {
+            &:nth-child(8n+1) {
                 clear: left;
-            }
-            a,
-            a:active,
-            a:focus,
-            a:visited {
-                border: 2px solid $border-white;
-                background-color: transparent;
-            }
-            a {
-                width: 100%;
-                max-width: 120px;
-                position: relative;
-                margin: 0 auto;
-                padding: 10px 0;
-                border: 2px solid $border-white;
-                background-color: transparent;
-                text-align: center;
-                text-transform: uppercase;
-                color: $font-white;
-                @include custom-font($fs-medium,
-                $fw-400);
-                @include transition(0.5s,
-                ease,
-                background-color);
-                &:hover {
-                    background-color: $background-white;
-                    color: $font-gray;
-                }
             }
         }
     }
