--- a/assets/sass/general/_variable.scss
+++ b/assets/sass/general/_variable.scss
@@ -25,20 +25,24 @@ $white: #fff;
 $black: #000;
 $gray: #333;
 $puple: #b95ed5;
+$pink: #f79494;
 //
 // Text Colors
 $font-white: $white;
 $font-black: $black;
 $font-gray: $gray;
 $font-puple: $puple;
+$font-pink: $pink;
 //
 // Background Colors
 $background-white: $white;
 $background-black: $black;
 $background-gray: $gray;
 $background-puple: $puple;
+$background-pink: $pink; 
 //
 // Border Colors
 $border-white: $white;
 $border-black: $black;
 $border-gray: $gray;
+$border-pink: $pink;
