--- a/assets/sass/style/_common.scss
+++ b/assets/sass/style/_common.scss
@@ -49,7 +49,7 @@ a {
 ========================*/
 
 body {
-    background-color: #f79494;
+    background-color: $background-pink;
 }
 
 a.back-to-article {
