--- a/assets/sass/style/checkbox/_checkbox-b.scss
+++ b/assets/sass/style/checkbox/_checkbox-b.scss
@@ -3,11 +3,11 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-b+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background: transparent;
     @include transition(0.5s, ease, all);
 }
 
 input[type='checkbox']#checkbox-b:checked+label {
-    border: 8px solid #fff;
+    border: 8px solid $border-white;
 }
