--- a/assets/sass/style/checkbox/_checkbox-c.scss
+++ b/assets/sass/style/checkbox/_checkbox-c.scss
@@ -3,13 +3,13 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-c+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background-color: transparent;
     @include transition(0.8s, ease, border);
 }
 
 input[type='checkbox']#checkbox-c:checked+label {
-    border: 8px solid #fff;
+    border: 8px solid $border-white;
     background: rgba(0, 0, 0, 0.5);
     @include transition(0.5s, ease, all);
 }
