--- a/assets/sass/style/checkbox/_checkbox-d.scss
+++ b/assets/sass/style/checkbox/_checkbox-d.scss
@@ -3,14 +3,14 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-d+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background-color: transparent;
     @include transition(0.8s, ease, border);
 }
 
 input[type='checkbox']#checkbox-d:checked+label {
-    border-left: 10px solid #fff;
-    border-right: 10px solid #fff;
+    border-left: 10px solid $border-white;
+    border-right: 10px solid $border-white;
     background: rgba(0, 0, 0, 0.5);
     @include transition(0.5s, ease, all);
 }
