--- a/assets/sass/style/checkbox/_checkbox-e.scss
+++ b/assets/sass/style/checkbox/_checkbox-e.scss
@@ -3,14 +3,14 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-e+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background-color: transparent;
     @include transition(0.8s, ease, border);
 }
 
 input[type='checkbox']#checkbox-e:checked+label {
-    border-top: 10px solid #fff;
-    border-bottom: 10px solid #fff;
+    border-top: 10px solid $border-white;
+    border-bottom: 10px solid $border-white;
     background: rgba(0, 0, 0, 0.5);
     @include transition(0.5s, ease, all);
 }
