--- a/assets/sass/style/checkbox/_checkbox-f.scss
+++ b/assets/sass/style/checkbox/_checkbox-f.scss
@@ -3,7 +3,7 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-f+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background: transparent;
     @include transition(0.5s, ease, background);
     background-position: cennter;
