--- a/assets/sass/style/checkbox/_checkbox-g.scss
+++ b/assets/sass/style/checkbox/_checkbox-g.scss
@@ -3,7 +3,7 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-g+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background: transparent url(../images/tick-icon-transparent.png) no-repeat;
     background-position: center;
     background-size: 40px 40px;
