--- a/assets/sass/style/checkbox/_checkbox-o.scss
+++ b/assets/sass/style/checkbox/_checkbox-o.scss
@@ -3,7 +3,7 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-o+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background: transparent;
 }
 
