--- a/assets/sass/style/checkbox/_checkbox-r.scss
+++ b/assets/sass/style/checkbox/_checkbox-r.scss
@@ -3,13 +3,13 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-r+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
 }
 
 input[type='checkbox']#checkbox-r+label:before,
 input[type='checkbox']#checkbox-r+label:after {
     content: '';
-	width: 10px;
+    width: 10px;
     height: 10px;
     position: absolute;
     left: 0;
@@ -17,18 +17,18 @@ input[type='checkbox']#checkbox-r+label:after {
     top: 0;
     bottom: 0;
     margin: auto;
-	opacity: 0;
-	z-index: -1;
-	@include transition(0.2s, ease, all);
+    opacity: 0;
+    z-index: -1;
+    @include transition(0.2s, ease, all);
 }
 
 input[type='checkbox']#checkbox-r+label:before {
-    background: rgba(0,0,0,0.5);    
+    background: rgba(0, 0, 0, 0.5);
 }
 
 input[type='checkbox']#checkbox-r+label:after {
-    background: #fff;
-		transition-delay: 0.3s;
+    background: $background-white;
+    transition-delay: 0.3s;
     -webkit-transition-delay: 0.3s;
     -moz-transition-delay: 0.3s;
 }
@@ -36,16 +36,16 @@ input[type='checkbox']#checkbox-r+label:after {
 input[type='checkbox']#checkbox-r:checked+label:before {
     width: 26px;
     height: 26px;
-	opacity: 1;
-	z-index: 1;
-	@include transition(0.2s, ease, all);
-	transition-delay: 0.3s;
+    opacity: 1;
+    z-index: 1;
+    @include transition(0.2s, ease, all);
+    transition-delay: 0.3s;
     -webkit-transition-delay: 0.3s;
     -moz-transition-delay: 0.3s;
 }
 
 input[type='checkbox']#checkbox-r:checked+label:after {
-	opacity: 1;
-	z-index: 1;
-	@include transition(0.2s, ease, all);
+    opacity: 1;
+    z-index: 1;
+    @include transition(0.2s, ease, all);
 }
