--- a/assets/sass/style/checkbox/_checkbox-t.scss
+++ b/assets/sass/style/checkbox/_checkbox-t.scss
@@ -3,26 +3,26 @@
   ------------------*/
 
 input[type='checkbox']#checkbox-t+label {
-    border: 1px solid #fff;
+    border: 1px solid $border-white;
     background: tranparent;
-	@include border-radius(50%);
+    @include border-radius(50%);
 }
 
 input[type='checkbox']#checkbox-t+label:before {
     content: '';
     width: 20px;
-	height: 20px;
-	top: 0;
+    height: 20px;
+    top: 0;
     left: 0;
     bottom: -60px;
     right: 0;
     position: absolute;
     margin: auto;
-    background: #fff;
-	@include border-radius(50%);
-	@include transition(0.2s, ease, all);
+    background: $background-white;
+    @include border-radius(50%);
+    @include transition(0.2s, ease, all);
 }
 
 input[type='checkbox']#checkbox-t:checked+label:before {
-	bottom: 0;
+    bottom: 0;
 }
