--- a/assets/sass/style/_checkbox.scss
+++ b/assets/sass/style/_checkbox.scss
@@ -3,7 +3,8 @@ Check Boxes Styles
 ========================*/
 
 input[type='checkbox'] {
-    display: none;
+    opacity: 0;
+	z-index: -1;
 }
 
 input[type='checkbox']+label {
