--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,8 @@ main {
 Check Boxes Styles
 ========================*/
 input[type='checkbox'] {
-  display: none; }
+  opacity: 0;
+  z-index: -1; }
 
 input[type='checkbox'] + label {
   width: 40px;
